fix: Align components

--- a/src/app/modules/portfolio/components/curriculum/curriculum.component.scss
+++ b/src/app/modules/portfolio/components/curriculum/curriculum.component.scss
@@ -4,7 +4,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 1.5rem;
+        gap: 2rem;
 
         h2 {
             font-size: 3rem;
