--- a/src/app/modules/portfolio/components/tech-slider/tech-slider.component.scss
+++ b/src/app/modules/portfolio/components/tech-slider/tech-slider.component.scss
@@ -1,26 +1,36 @@
-#carouselExampleSlidesOnly {
-    display: flex;
-    justify-content: center;
-}
-
-.carousel {
-    width: 100%;
-    height: 250px;
-    overflow: hidden;
-
-    .carousel-inner {
+.keen-slider {
+    max-width: 1400px;
+    .card {
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
 
-        .carousel-item {
-            width: 100%;
-            height: 200px;
-            background-color: var(--primary-bg);
+        width: 100%;
+        height: 150px;
+        max-width: 200px;
+        padding: 1rem;
 
-            img {   
-                width: 100%;
-                height: 100px;
-                object-fit: contain;
-            }
+        border-radius: 8px;
+
+        background-color: var(--primary-bg);
+        color: var(--primary-font);
+        transition: border 1s;
+
+        img {
+            height: 100px;
+            object-position: center;
+        }
+
+        h4 {
+            font-weight: 200;
         }
     }
+
+    .card:hover, .card:focus {
+        border: 1px solid var(--primary-font);
+    }
+
+
 }
+                
